--- a/src/components/UserCard/styles/style.module.css
+++ b/src/components/UserCard/styles/style.module.css
@@ -1,7 +1,8 @@
 .card {
+    margin: 10px;
     background-color: white;
     border-radius: 10px;
-    width: 30%;
+    width: 100%;
     height: 200px;
     display: flex;
     flex-direction: column;
