--- a/src/pages/home/styles/style.module.css
+++ b/src/pages/home/styles/style.module.css
@@ -1,10 +1,21 @@
 .main {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
-    /* align-items: center; */
     padding: 5rem;
     min-height: 100vh;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  padding: 10px;
+}
+
+.content {
+  display: flex;
+  width: 70%;
+  padding: 10px;
 }
 
 .contain {
@@ -16,7 +27,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    /* background-color: black; */
 }
 
 .leftsection {
