--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -3,6 +3,15 @@
     flex-direction: column;
     /* justify-content: space-between; */
     align-items: center;
-    padding: 5rem;
+    padding: 1rem;
     min-height: 100vh;
+}
+
+.contentCard {
+    margin: 10px;
+    background-color: white;
+    border-radius: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
