--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -9,9 +9,18 @@
 
 .contentCard {
     margin: 10px;
+    padding: 20px;
     background-color: white;
     border-radius: 10px;
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.contentCardTitle {
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
