--- a/src/components/Search/styles/style.module.css
+++ b/src/components/Search/styles/style.module.css
@@ -2,7 +2,8 @@
     width: 60px;
     height: 30px;
     border-radius: 5px;
-    background-color: green;
+    background-color: #3cc9ac;
+    color: white;
 }
 
 .input {
