--- a/src/components/SideBar/components/MenuButton/styles/styles.module.css
+++ b/src/components/SideBar/components/MenuButton/styles/styles.module.css
@@ -1,5 +1,5 @@
 .menuButton {
-    padding: 20px;
+    padding: 40px;
     width: 100%;
     height: 50px;
     display: flex;
@@ -9,7 +9,7 @@
 
 .label {
     display: flex;
-    font-size: large;
+    font-size: 25px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
