--- a/src/components/AllReview/components/ListItem/styles/style.module.css
+++ b/src/components/AllReview/components/ListItem/styles/style.module.css
@@ -1,10 +1,11 @@
 .listbox {
     width: 100%;
-    height: 60px;
+    height: auto;
     padding: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .info {
