--- a/src/components/AllReview/styles/style.module.css
+++ b/src/components/AllReview/styles/style.module.css
@@ -7,3 +7,27 @@
     height: 2px;
     background-color: rgb(198, 197, 197);
 }
+
+.input {
+    margin-top: 20px;
+    width: 100%;
+    height: 80px;
+    border: 2px solid blue;
+    border-radius: 5px;
+}
+
+.button {
+    margin: 10px 0px 20px 0px;
+    width: 60px;
+    height: 30px;
+    border: 3px solid gray;
+    border-radius: 5px;
+    background-color: green;
+}
+
+.commentbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
