--- a/src/components/Learn/components/ListItem/styles/style.module.css
+++ b/src/components/Learn/components/ListItem/styles/style.module.css
@@ -1,14 +1,10 @@
 .listbox {
     width: 100%;
-    height: 60px;
+    height: auto;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.info {
-    background-color: black;
 }
 
 .button {
