--- a/src/components/OwnReview/components/ListItem/styles/style.module.css
+++ b/src/components/OwnReview/components/ListItem/styles/style.module.css
@@ -1,10 +1,10 @@
 .listbox {
     width: 100%;
-    height: 60px;
+    height: auto;
     padding: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
 }
 
 .info {
