--- a/src/components/Search/components/ListItem/styles/style.module.css
+++ b/src/components/Search/components/ListItem/styles/style.module.css
@@ -8,6 +8,7 @@
 }
 
 .useButton {
+    width: 4rem;
     border-radius: 5px;
     border: 1px ;
     padding: 7px;
@@ -16,6 +17,7 @@
 }
 
 .studyButton {
+    width: 4rem;
     border-radius: 5px;
     border: 1px solid;
     padding: 7px;
