--- a/src/components/SideBar/components/MenuButton/styles/styles.module.css
+++ b/src/components/SideBar/components/MenuButton/styles/styles.module.css
@@ -3,8 +3,9 @@
     width: 100%;
     height: 50px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .label {
