--- a/src/pages/learning/styles/style.module.css
+++ b/src/pages/learning/styles/style.module.css
@@ -28,8 +28,6 @@
 }
 
 .dialog {
-    border-radius: 5px;
-    border: 2px solid black;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,6 +37,6 @@
 .confirm {
     border-radius: 5px;
     background-color: blue;
-    width: 50px;
+    width: 5rem;
     height: 30px;
 }
