--- a/src/pages/register/styles/style.module.css
+++ b/src/pages/register/styles/style.module.css
@@ -34,6 +34,14 @@
 .input{
     margin-top: 30px;
     transform: scale(1.2);
+    display: flex;
+    flex-direction: row;
+    justify-self: center;
+    align-items: center;
+}
+
+.inputlable {
+    width: 5rem;
 }
 
 .registerButton{
